# CppMath

./: .editorconfig  .gitignore  CONTRIBUTORS  README.md
src/: CMakeLists.txt
src/cppmath/: Logger.cpp  Logger.hpp
src/cppmath/geometry/: Geometry.cpp  Geometry.hpp
src/cppmath/matlab/: MatReader.cpp  MatWriter.cpp  io.cpp  io.hpp
src/cppmath/matrix/: PseudoInverseSVD-impl.hpp  PseudoInverseSVD.hpp
src/cppmath/optimization/: DownhillSimplexMethod-impl.hpp  DownhillSimplexMethod.hpp  DownhillSimplexMethodNM-impl.hpp  DownhillSimplexMethodNM.hpp  DownhillSimplexMethodWiki-impl.hpp  DownhillSimplexMethodWiki.hpp
src/examples/matlab/: ReadMat.cpp
src/examples/matrix/: PseudoInverseSvdExample.cpp
src/examples/optimization/: BealesFunction.cpp  BealesFunction.hpp  DownhillSimplexExample.cpp  ParabolicValley.cpp  ParabolicValley.hpp  QuarticFunction.cpp  QuarticFunction.hpp
src/matrix/: PseudoInverseSVD-impl.hpp  PseudoInverseSVD.hpp
src/optimization/: DownhillSimplexMethod-impl.hpp  DownhillSimplexMethod.hpp  DownhillSimplexMethodWiki-impl.hpp  DownhillSimplexMethodWiki.hpp
test/geometry/: TestGeometry.hpp
test/matrix/: TestPseudoInverseSVD.hpp
test/optimization/: TestDownhillSimplexMethod.hpp  TestDownhillSimplexMethodNM.hpp
tools/: codeStyleDefinition_CppMath_eclipse.xml  install_dependencies.sh
tools/PackBacker/jobs/: CppMath_dependencies.pb
tools/cmake/: FindEigen3.cmake
tools/installation/: install.py  install_cxxtest.py  install_eigen3.py
